opt: Totally remove ix-java, replace common-io with stock JDK API